--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -276,6 +276,12 @@ The solar charge controller that we came to conclusion with was the Texas Instru
 		\hline
 	\end{tabularx}
 \end{table}
+\begin{figure}[H]
+    \caption{BQ25713 General Application Schematic}
+    \centering
+    \includegraphics[width=\textwidth]{images/BQ25713_Application_Diagram.png}
+    \label{fig:BQ25713 General Application Schematic}
+\end{figure}
 \paragraph{Voltage Regulator}
 Voltage regulators play an important role in almost every electronic device. All electronic devices operate at different voltage ranges, some requiring a constant voltage. Common operating voltages are 3V, 5V, and 12V. To provide this voltage range or constant voltage, a voltage regulator is added into the circuit design. Voltage regulators help regulate voltages during power fluctuations and different variations in loads, preventing damage to any component. They can also regulate DC and AC voltages. For this power system, we will be focusing on DC voltage. This is because solar panels produce DC voltage. \par
 As said before, voltage regulators play an important role in almost every electronic device. They are used for smaller devices to power components such as sensors, op-amps, and other modules, but can also be used in bigger applications such as TV’s, automotive vehicles, industrial applications, and many more. There are two main voltage regulators: linear and switching. Both of these types have the same goal, regulating a system’s voltage but operate differently depending on the application that it is used for. \par
