--- a/design-details/power.tex
+++ b/design-details/power.tex
@@ -1,12 +1,12 @@
 \subsection{Power Subsystem}
 \label{sec:power_subsystem}
 The power system is an important part to any electrical device or component that requires any amount of power. It simply starts from a power source such as a battery or wall outlet then is converted into energy to operate what is being used. At the minimum this model is designed to be an independent system, having the capability to operate on its own. The way that can be achieved is through solar power. \par
-Solar power has been such a strong growing source of energy and will play a vital role in our system. Power is collected through the solar panels and then regulated through the charge controller. The power is regulated through the charge controller so that the battery is not being over charge, which could potentially damage it. Of course, power collected from the solar panels needs to be stored in a battery, which will also be used to power our system. From there, voltage needs to be regulated once more for the microcontroller and other components are powered properly. The block diagram in \autoref{fig:power-block-diagram} shows the flow of power through the system. 
+Solar power has been such a strong growing source of energy and will play a vital role in our system. Power is collected through the solar panels and then regulated through the charge controller to ensure that the battery is receiving the correct amount of charge. The power is regulated through the charge controller so that the battery is not being over charge, which could potentially damage it and reduce the battery life in the future. It is then stored in a battery when the system is not operating and then utilized when needed. From there, voltage needs to be regulated again throught the voltage regulator for the microcontroller and other components that require different amounts of voltage. The block diagram in \autoref{fig:power-block-diagram} shows the flow of power through the system. 
 
 \begin{figure}[H]
     \centering
     \caption{Power subsystem block diagram}
-    \includegraphics[width=\textwidth]{images/PowerSystemBlock.png}
+    \includegraphics[width=\textwidth]{images/Power_System_Flowchart.png}
     \label{fig:power-block-diagram}
 \end{figure}
 The block labeled ``Mechanics'' in \autoref{fig:power-block-diagram} refers to the solenoid valve for controlling water flow as well as the control scheme for actuating the solar panels to maximize power efficiency.
